add IndexesFile & test; add IndexesJson & test; add PrintableIndexesCaptures; rename PrintableCapturesImpl to PrintableTargetLookupCaptures